# pico-fun

./: .gitignore  Cargo.toml
arc-polyfill/: Cargo.toml
arc-polyfill/src/: lib.rs
async-utils/: Cargo.toml
async-utils/src/: channel.rs  lib.rs
async-utils/src/channel/: capacity_1.rs
display/: Cargo.toml
display/src/: lcd.rs  main.rs
first/: Cargo.toml
first/src/: main.rs
generate-midi-notes/: Cargo.toml
generate-midi-notes/src/: lib.rs  main.rs
hal-exts/: Cargo.toml
hal-exts/src/: lib.rs
headphones-1/: Cargo.toml
headphones-1/src/: main.rs
headphones-2/: Cargo.toml  pcm.pio
headphones-2/src/: lcd.rs  main.rs
max7219/: Cargo.toml
max7219/src/: lib.rs
pcm-encode/: Cargo.toml
pcm-encode/src/: main.rs
rp2040-project-template/: Cargo.toml
seven-seg-1/: Cargo.toml
seven-seg-1/src/: main.rs  max7219.rs  midi_notes.rs  sevenseg_5611bs.rs
sevenseg-5611bs/: Cargo.toml
sevenseg-5611bs/src/: lib.rs
song/: Cargo.toml
song-midi/: Cargo.toml  file.mid  scale.mid
song-midi/src/: lcd.rs  main.rs  max7219.rs
song/src/: alloc_utils.rs  async_utils.rs  hal_exts.rs  lcd.rs  main.rs  max7219.rs
st7789/: Cargo.toml
st7789/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
