[package]
name = "async-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-polyfill = { version = "0.1.0", path = "../arc-polyfill" }
cortex-m = "0.7.6"
critical-section = "1.1.1"
fugit = "0.3.6"
hal-exts = { version = "0.1.0", path = "../hal-exts" }
rp-pico = "0.5.0"
