[package]
name = "sevenseg-5611bs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
hal-exts = { version = "0.1.0", path = "../hal-exts" }
utils = { version = "0.1.0", path = "../utils" }
