[package]
edition = "2021"
name = "song"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.5"
libm = "0.2.5"
i2c-pio = "0.4.0"
fugit = "0.3.6"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
once_cell = { version = "1.15.0", default-features = false }
lcd-lcm1602-i2c = "0.1.0"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.3"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.6", features=["rt"] }
# rp2040-boot2 = "0.2"
